RESOLVED FIXED115818
REGRESSION(r148121): Empty Span does not get a linebox when it's in an anonymous block
https://bugs.webkit.org/show_bug.cgi?id=115818
Summary REGRESSION(r148121): Empty Span does not get a linebox when it's in an anonym...
Robert Hogan
Reported 2013-05-08 12:24:42 PDT
Created attachment 201094 [details] Reduction - There should be a red linebox after the first green div ..
Attachments
Reduction - There should be a red linebox after the first green div (446 bytes, text/html)
2013-05-08 12:24 PDT, Robert Hogan
no flags
Patch (4.41 KB, patch)
2013-05-09 12:31 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2013-05-09 12:31:08 PDT
Dave Hyatt
Comment 2 2013-05-10 11:25:50 PDT
Comment on attachment 201264 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-05-10 12:02:14 PDT
Comment on attachment 201264 [details] Patch Clearing flags on attachment: 201264 Committed r149897: <http://trac.webkit.org/changeset/149897>
WebKit Commit Bot
Comment 4 2013-05-10 12:02:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.