REGRESSION(r148121): Empty Span does not get a linebox when it's in an anonymous block https://bugs.webkit.org/show_bug.cgi?id=115818

Reviewed by David Hyatt.

Source/WebCore:

r148121 only worried about split inlines inside anonymous blocks - it ought to have
catered for empty inlines, with no continuations, inside a single solitary anonymous block too.

Test: fast/inline/anonymous-block-with-empty-inline.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::hasInlineDirectionBordersPaddingOrMargin):

LayoutTests:

* fast/inline/anonymous-block-with-empty-inline-expected.txt: Added.
* fast/inline/anonymous-block-with-empty-inline.html: Added.


Canonical link: https://commits.webkit.org/134351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149897 268f45cc-cd09-0410-ab3c-d52691b4dbfc